test/testdata/classes/inheritance/super_outside_method_error.lox
// error: 'super' can only be used inside a method definition
// lint error: 'super' can only be used inside a method definition
print super.foo;
